pro1: devicesettings: Inject keyboard settings into proper place
Make use of the possibility to include "Additional buttons" preference
under Buttons settings. Isn't it the best place to put hardware keyboard
key settings?

Change-Id: I2b52dd1fc0cf48092a5033765151ec7be6d38594

--- a/devicesettings/res/values/strings.xml
+++ b/devicesettings/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018-2019 The LineageOS Project
+     Copyright (C) 2018-2020 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -16,8 +16,7 @@
 -->
 
 <resources>
-    <string name="keyboard_settings_title">Keyboard</string>
-    <string name="keyboard_settings_summary">Layout, Keymap, Polling</string>
+    <string name="keyboard_settings_title">Hardware keyboard</string>
 
     <string name="keyboard_layout_title">Layout</string>
 
