pro1: devicesettings: Move keyboard settings to a new place
This remote preference can now be injected directly into
Settings / Languages and input / Physical keyboard.

Change-Id: If2605a9786b4345a47f4cbe0e3920066d44d6b1a

--- a/devicesettings/res/values/strings.xml
+++ b/devicesettings/res/values/strings.xml
@@ -16,7 +16,7 @@
 -->
 
 <resources>
-    <string name="keyboard_settings_title">Hardware keyboard</string>
+    <string name="keyboard_settings_title">Advanced keyboard settings</string>
 
     <string name="keyboard_layout_title">Layout</string>
 
