pro1: devicesettings: Add SetupWizard page
TODO: Add text here!

Change-Id: I582fb19912b15b7ccf97aa5418cfedbb4096d060

--- a/devicesettings/res/values/strings.xml
+++ b/devicesettings/res/values/strings.xml
@@ -40,4 +40,9 @@
 
     <string name="touchscreen_margin_title">Margin</string>
     <string name="touchscreen_margin_summary">Margin level: %d</string>
+
+    <!-- Setup wizard integration -->
+    <string name="setupwizard_title">Keyboard settings</string>
+    <string name="setupwizard_summary">This device is available with different hardware keyboard layouts.
+In order for the device to be able to send the correct keys, please set the actual keyboard layout below.</string>
 </resources>
