--- a/devicesettings/res/values/strings.xml
+++ b/devicesettings/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018-2020 The LineageOS Project
+     Copyright (C) 2018-2021 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -40,4 +40,10 @@
 
     <string name="touchscreen_margin_title">Margin</string>
     <string name="touchscreen_margin_summary">Margin level: %d</string>
+
+    <!-- Setup wizard integration -->
+    <string name="setupwizard_title">Keyboard settings</string>
+    <string name="setupwizard_summary">This device is available with different hardware keyboard layouts.
+In order for the device to be able to send the correct keys, please set the actual keyboard layout below.</string>
+    <string name="setupwizard_next">Next</string>
 </resources>
