pro1: devicesettings: Introduce PhysicalLayoutDialog
* With change I1c46d3568c4d5bfc78e1cbae033071c7641fdf29 it is now
  possible to inject the keyboard layout selection to where they fit
  best: Before the built-in keyboard settings
* This dialog shows the same selection as the previous ListPreference
* Move the code getting the current and setting a new value to the
  newly added class as well
* Remove the unneded constant

Change-Id: I6f7e4ed85aff7fefe074cbcfbad140a83a01053d

--- a/devicesettings/res/values/strings.xml
+++ b/devicesettings/res/values/strings.xml
@@ -19,7 +19,7 @@
     <!-- Keyboard setting strings -->
     <string name="keyboard_settings_title">Advanced keyboard settings</string>
 
-    <string name="keyboard_layout_title">Physical layout</string>
+    <string name="keyboard_layout_dialog_title">Select the device\'s keyboard layout</string>
 
     <string name="keyboard_keymap_custom_title">Custom keymap</string>
     <string name="keyboard_keymap_custom_summary_enabled">Enable your custom keymap</string>
