pro1: devicesettings: Add keymap mod for fn_r -> AltGr
Add a new keymap mod setting to change the right-hand diagonal
yellow arrow key to AltGr

Change-Id: I30da5417242a4bb3245ce4974b531b5523c77313

--- a/devicesettings/res/values/strings.xml
+++ b/devicesettings/res/values/strings.xml
@@ -33,6 +33,9 @@
     <string name="keyboard_keymap_fnkeys_title">FN + top row sends F1-F12</string>
     <string name="keyboard_keymap_fnkeys_summary">Emulate F1-F12 keys with function and the top row keys</string>
 
+    <string name="keyboard_keymap_altgr_title">Right FN key sends AltGr</string>
+    <string name="keyboard_keymap_altgr_summary">Change right-hand diagonal yellow arrow key to AltGr</string>
+
     <string name="keyboard_fastpoll_title">Fast poll</string>
     <string name="keyboard_fastpoll_summary">Poll the keyboard at a faster rate (\"Gaming mode\")</string>
 
